--- a/requirements.txt
+++ b/requirements.txt
@@ -91,7 +91,8 @@ opt-einsum==3.3.0
 optree==0.10.0
 overrides==7.7.0
 packaging==24.0
-pandas==2.2.1
+cython<3
+pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
 peewee==3.17.6
