Fix: enforce Python 3.12 and Cython compatibility and requirement file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,173 @@
-absl-py==2.1.0
-anyio==4.6.2.post1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.7.0
-bson==0.5.10
-certifi==2024.2.2
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.2.0
-cycler==0.12.1
-debugpy==1.8.7
-decorator==5.1.1
-defusedxml==0.7.1
-dm-tree==0.1.8
-dnspython==2.6.1
-executing==2.1.0
-fastjsonschema==2.20.0
-filelock==3.16.1
-Flask==3.0.2
-flatbuffers==24.3.7
-fonttools==4.50.0
-fqdn==1.5.1
-frozendict==2.4.4
-fsspec==2024.12.0
-gast==0.5.4
-google-pasta==0.2.0
-grpcio==1.62.1
-h11==0.14.0
-h5py==3.10.0
-html5lib==1.1
-httpcore==1.0.6
-httpx==0.27.2
-idna==3.6
-ipykernel==6.29.5
-ipython==8.28.0
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.3.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-keras==3.1.1
-kiwisolver==1.4.5
-libclang==16.0.6
-lxml==5.3.0
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.3
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.0.2
-ml-dtypes==0.3.2
-mpmath==1.3.0
-multitasking==0.0.11
-namex==0.0.7
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==1.26.4
-opencv-python==4.9.0.80
-opt-einsum==3.3.0
-optree==0.10.0
-overrides==7.7.0
-packaging==24.0
+# === Core Python Compatibility ===
 cython<3
-pandas==2.2.2
-pandocfilters==1.5.1
-parso==0.8.4
-peewee==3.17.6
-pillow==10.2.0
-platformdirs==4.3.6
-prometheus_client==0.21.0
-prompt_toolkit==3.0.48
-protobuf==4.25.3
-psutil==6.1.0
-pure_eval==0.2.3
-pycparser==2.22
-Pygments==2.17.2
-pymongo==4.7.3
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
-python-json-logger==2.0.7
-pytz==2024.1
-pywin32==308
-pywinpty==2.0.14
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-rpds-py==0.20.0
+
+# === Data Science & Machine Learning ===
+numpy==1.26.4
+pandas==2.2.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
-Send2Trash==1.8.3
-setuptools==69.2.0
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.6
-stack-data==0.6.3
+matplotlib==3.8.3
+seaborn  # (optional: add version if used)
 sympy==1.13.1
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
+
+# === Deep Learning ===
 tensorflow==2.16.1
 tensorflow-intel==2.16.1
-termcolor==2.4.0
-terminado==0.18.1
-threadpoolctl==3.4.0
-tinycss2==1.4.0
+keras==3.1.1
+h5py==3.10.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+wrapt==1.16.0
+gast==0.5.4
+opt-einsum==3.3.0
+dm-tree==0.1.8
+ml-dtypes==0.3.2
+optree==0.10.0
+
+# === PyTorch Ecosystem ===
 torch==2.5.1
 torchaudio==2.5.1
 torchvision==0.20.1
-tornado==6.4.1
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20241003
-typing_extensions==4.10.0
-tzdata==2024.1
-uri-template==1.3.0
-urllib3==2.2.1
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
+
+# === Flask Web Backend ===
+Flask==3.0.2
+Jinja2==3.1.3
 Werkzeug==3.0.1
-wheel==0.43.0
-wrapt==1.16.0
+itsdangerous==2.1.2
+click==8.1.7
+
+# === Frontend Support (Jupyter/Notebook) ===
+notebook==7.2.2
+jupyterlab==4.2.5
+jupyterlab_server==2.27.3
+jupyter_core==5.7.2
+jupyter_client==8.6.3
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab_pygments==0.3.0
+jupyter-lsp==2.2.5
+jupyter-events==0.10.0
+nbformat==5.10.4
+nbclient==0.10.0
+nbconvert==7.16.4
+notebook_shim==0.2.4
+
+# === Interactive Python Tools ===
+ipython==8.28.0
+ipykernel==6.29.5
+prompt_toolkit==3.0.48
+pygments==2.17.2
+traitlets==5.14.3
+matplotlib-inline==0.1.7
+stack-data==0.6.3
+parso==0.8.4
+jedi==0.19.1
+asttokens==2.4.1
+pure_eval==0.2.3
+executing==2.1.0
+decorator==5.1.1
+
+# === File & Web Utilities ===
+requests==2.31.0
+urllib3==2.2.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+html5lib==1.1
+beautifulsoup4==4.12.3
+soupsieve==2.6
+webencodings==0.5.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+tzdata==2024.1
 yfinance==0.2.43
+multitasking==0.0.11
+
+# === JSON, Validation, Serialization ===
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jsonpointer==3.0.0
+fastjsonschema==2.20.0
+referencing==0.35.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+uri-template==1.3.0
+
+# === MongoDB & BSON ===
+pymongo==4.7.3
+bson==0.5.10
+
+# === Terminal & Output Formatting ===
+rich==13.7.1
+colorama==0.4.6
+
+# === Async, HTTP, Websockets ===
+anyio==4.6.2.post1
+async-lru==2.0.4
+httpx==0.27.2
+httpcore==1.0.6
+h11==0.14.0
+websocket-client==1.8.0
+sniffio==1.3.1
+nest-asyncio==1.6.0
+
+# === Image & Media ===
+opencv-python==4.9.0.80
+Pillow==10.2.0
+
+# === Math Libraries ===
+mpmath==1.3.0
+
+# === Plotting Utilities ===
+cycler==0.12.1
+kiwisolver==1.4.5
+contourpy==1.2.0
+fonttools==4.50.0
+
+# === YAML, XML, HTML Parsing ===
+lxml==5.3.0
+PyYAML==6.0.2
+MarkupSafe==2.1.5
+defusedxml==0.7.1
+
+# === Security & Encoding ===
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+cffi==1.17.1
+pycparser==2.22
+bleach==6.1.0
+
+# === System Utilities ===
+psutil==6.1.0
+filelock==3.16.1
+platformdirs==4.3.6
+packaging==24.0
+setuptools==69.2.0
+wheel==0.43.0
+
+# === Win-specific Tools (safe to keep cross-platform) ===
+pywin32==308
+pywinpty==2.0.14
+
+# === Optional/Experimental Libraries ===
+flatbuffers==24.3.7
+protobuf==4.25.3
+namex==0.0.7
+fsspec==2024.12.0
+peewee==3.17.6
+blinker==1.7.0
+Markdown==3.6
+markdown-it-py==3.0.0
+mistune==3.0.2
+mdurl==0.1.2
+fqdn==1.5.1
+overrides==7.7.0
+types-python-dateutil==2.9.0.20241003
+prometheus_client==0.21.0
+send2trash==1.8.3
+tinycss2==1.4.0
+webcolors==24.8.0
+
+# === Notebook Extensions & Tools ===
+terminado==0.18.1
+python-json-logger==2.0.7
